# c0ne

./: .gdb_history  .gitignore  README.md  build.sh  run.sh
fandango-tests/: constraints.py  fandango-run.py  pyproject.toml  spec.fan
haskell/: .gitignore  c0ne.cabal  debug!  l1c.cabal  run.sh
haskell/app/: Compile.hs
haskell/app/Compile/: AST.hs  Parser.hs  Semantic.hs
haskell/app/Compile/Backend/: Schedule.hs
haskell/app/Compile/Backend/X86/: Codegen.hs  RegAlloc.hs
haskell/app/Compile/IR/: SSA.hs
jvm/: README.md  build.gradle.kts  build.sh  run.sh  settings.gradle.kts
jvm/.run/: Compile!.run.xml
jvm/src/main/java/de/mr_pine/c0ne/: Main.kt  Position.kt  Span.kt
jvm/src/main/java/de/mr_pine/c0ne/analysis/: BackwardsFlow.kt  ControlFlow.kt
jvm/src/main/java/de/mr_pine/c0ne/backend/: AllocationInterferenceGraph.kt  AllocationRequirement.kt  CodeGenerator.kt  ControlFlowOrder.kt  LivenessAnalysis.kt  Register.kt  RegisterAllocator.kt  Schedule.kt
jvm/src/main/java/de/mr_pine/c0ne/ir/: GraphConstructor.kt  IrGraph.kt  NodeHelper.kt  SsaTranslation.kt
jvm/src/main/java/de/mr_pine/c0ne/lexer/: ErrorToken.kt  Identifier.kt  Keyword.kt  KeywordType.kt  Lexer.kt  NumberLiteral.kt  Operator.kt  Separator.kt  Token.kt
jvm/src/main/java/de/mr_pine/c0ne/parser/: ParseException.kt  Parser.kt  Printer.kt  TokenSource.kt
jvm/src/main/java/de/mr_pine/c0ne/semantic/: BreakContinueAnalysis.kt  OperatorTypes.kt  (+11 more)
jvm/src/test/kotlin/: CodeGenTest.kt  CrowTests.kt  LexerTest.kt  ParserTest.kt  SemanticTest.kt  TestUtil.kt
jvm/src/test/kotlin/crow/: Provider.kt
(+168 files in other folders)
