cabal-version:      3.0
name:               c0ne
version:            0.1.0.0

synopsis: Simple toy compiler
description: This was developed for the lecture 'Compiler Design' in the summer term 2025 by AndreÌ Platzer at KIT Karlsruhe

author:             MisterPine
maintainer:         git@mr-pine.de

build-type:         Simple

common warnings
    ghc-options: -Wall

executable c0ne
    import:           warnings
    main-is:          Main.hs
    build-depends:
                  base >= 4.15 && < 5,
                  containers,
                  directory,
                  filepath,
                  megaparsec >= 9.7.0,
                  mtl,
                  optparse-applicative >= 0.18.1.0,
                  parser-combinators,
                  transformers,
                  pretty-simple,
                  extra,
                  safe,
                  temporary,
                  process,
    other-modules:
                  Args,
                  Compile,
                  Compile.AST,
                  Compile.Parser,
                  Compile.Semantic,
                  Compile.AAsm,
                  Compile.Backend.X86.RegAlloc,
                  Compile.Backend.X86.Codegen,
                  Compile.IR.SSA,
                  Compile.Backend.Schedule,
                  Error
    hs-source-dirs:   app
    default-language: Haskell2010
